--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,16 @@
 name: CD Fake
 on: 
     workflow_dispatch: 
+        inputs:
+            ambiente:
+                type: choice
+                options:
+                    - Homologacao
+                    - Producao
 jobs:
     deploy-fake:
         runs-on: ubuntu-latest
-        environment: producao
+        environment: ${{ inputs.ambiente }}
         steps:
             - name: Fake de deploy em ambiente
               run: echo "Deploy no ambiente de ${{ vars.AMBIENTE_DEPLOY }}"
